--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.1",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dropbox": "^10.34.0",
     "express": "^4.18.2",
